--- a/z-notes.html
+++ b/z-notes.html
@@ -15,6 +15,9 @@ https://github.com/user-attachments/assets/f62d5d75-d45f-4c01-b444-1c99a4031e27
       raspberrypicodecrunch
 https://github.com/user-attachments/assets/1eaf8425-7b4b-4035-a84b-b9b0ed28c52c
 
+hack university 
+https://github.com/user-attachments/assets/223a12cb-c5ea-4009-a442-2ad144c8e1d6
+
 
 for students 
     const DEFAULT_LOGOS = [
