--- a/hackathonvolunteer-certificates-empowher-10.13-20.25.html
+++ b/hackathonvolunteer-certificates-empowher-10.13-20.25.html
@@ -309,8 +309,7 @@
 
             <div class="body-text">
               <p>In recognition of your outstanding contributions as a <strong>${c.rolesText}</strong> at the
-              <strong>${c.hackathonName}</strong>, held in <strong>${c.location}</strong> on <strong>${c.date}</strong>.</p>
-              <p><em>Your insights helped shape a fair and impactful competition experience for all participants.</em></p>
+              <strong>${c.hackathonName}</strong>, held in <strong>${c.location}</strong> on <strong>${c.date}</strong>.<em> Your insights helped shape a fair and impactful competition experience for all participants.</em></p>
               <br>
             </div>
           </div>
