--- a/hackathonvolunteer-certificates-empowhermini-10.18.25 copy.html
+++ b/hackathonvolunteer-certificates-empowhermini-10.18.25 copy.html
@@ -196,7 +196,7 @@
          CERTIFICATE GENERATOR
          ========================= -->
     <section class="surface" id="certificate-generator">
-      <h2 class="card-title" style="text-align:center">GENERATE YOUR CERTIFICATE • EmpowHer Hackathon Online Edition Oct 2025</h2>
+      <h2 class="card-title" style="text-align:center">GENERATE YOUR CERTIFICATE • EmpowHer Mini HackDAY Edition Oct 2025</h2>
       <p class="card-description" style="text-align:center">[ OFFICIAL PARTICIPATION CERTIFICATE ] — Download your volunteer certificate using your email address</p>
 
       <label for="certificateEmailInput" class="sr-only">Registered email address</label>
@@ -493,7 +493,7 @@
   <!-- Single, unified script (no conflicting globals) -->
   <script>
     // ===== Certificate API (unique, non-conflicting) =====
-    const CERT_API_URL = 'https://script.google.com/macros/s/AKfycbywm597zVrUBizxKkwSMZD1IkyCaAUEBFdubFv0O2MJDUIk53H5ORxmMv9E-K8pNVO8Nw/exec';
+    const CERT_API_URL = 'https://script.google.com/macros/s/AKfycbwclrSHV9T3Dl-AiVBRuW6vOx37qXM2-XlUblvBM3sW0LEmJOghacUdqCsw7E1fiiva/exec';
     let allCertificatesData = [];
 
     const esc = s => String(s ?? '').replace(/[&<>"']/g, m =>
