--- a/hackathonvolunteer-wiki.html
+++ b/hackathonvolunteer-wiki.html
@@ -154,12 +154,13 @@
   <nav class="navbar">
     <div class="nav-container">
       <div class="nav-brand">
-        <a href="https://codecrunchglobal.vercel.app" target="_blank" rel="noopener"><strong>Code Crunch</strong></a>
+        <a href="https://hackuniversity.vercel.app" target="_blank" rel="noopener"><strong>Hack University Initiative</strong></a>
       </div>
       <div class="nav-links">
+        <a href="https://codecrunchglobal.vercel.app" class="nav-link">Code Crunch Worldwide</a>
+        <a href="https://gdgatfiu.vercel.app/" class="nav-link">Google Developer Group at FIU</a>
         <a href="https://colorstackatfiu.vercel.app/" class="nav-link">ColorStack at FIU</a>
         <a href="https://cahsiatfiu.vercel.app/" class="nav-link">CAHSI at FIU</a>
-        <a href="https://gdgatfiu.vercel.app/" class="nav-link">Google Developer Group at FIU</a>
         <a href="https://raspberrypicrunch.vercel.app/" class="nav-link">Raspberry Pi Code Crunch</a>
         <a href="https://codecrunchglobal.vercel.app/hackuniversitydonate.html" class="nav-link">Support Us</a>
       </div>
@@ -249,20 +250,45 @@
                 <strong>Note:</strong> This is an <strong>interest-only mailing list</strong>.
                 Opportunities are shared <strong>monthly or as needed</strong> depending on event schedules. 
                 Completing this form <strong>does not guarantee</strong> a volunteer or mentorship role.
-                Only a <strong>successful Form No. 2 registration and acceptance</strong> for each event,
+                <!-- Only a <strong>successful Form No. 2 registration and acceptance</strong> for each event,
                 after completing all requirements, <strong>guarantees an official volunteer role.</strong>
                 You may update your responses on this form at any time with your most recent information;
                 however, <strong>information used for Devpost, certificates, and official records will be taken from
-                the event-specific Form No. 2 submissions.</strong>
+                the event-specific Form No. 2 submissions.</strong> -->
               </div>
             </div>
 
 
+      <!-- Form No. 1 -->
+      <div class="card">
+        <div class="card-icon">🎤</div>
+        <h3>Form No. 1 — Speakers & Mentors (Hack University Fellowship / Internship Program)</h3>
+        <p>
+          Apply to become a <strong>speaker or mentor</strong> for the 
+          <strong>Hack University Fellowship & Internship Program</strong>. 
+          Share your expertise through talks, panels, or mentorship sessions that inspire and guide students in their professional and technical growth.  
+          Submissions are reviewed on a rolling basis.
+        </p>
+        <a
+          class="card-button"
+          href="https://codecrunchvolunteerform-no1.vercel.app/"
+          target="_blank"
+          rel="noopener"
+        >
+          Open Form No. 1
+        </a>
+        <div class="small-note">
+          <strong>Note:</strong> This form is updated regularly based on each cohort’s focus areas and mentorship availability.  
+          Completing this form <strong>does not guarantee</strong> a speaking or mentorship slot.  
+          Only a <strong>successful Form No. 2 registration and acceptance</strong> after fulfilling all program requirements 
+          <strong>guarantees an official speaker or mentor role.</strong>
+        </div>
+      </div>
 
 
 
       <!-- Form No. 1 -->
-      <div class="card">
+      <!-- <div class="card">
         <div class="card-icon">🎓</div>
         <h3>Form No. 1 — Mentors & Workshop Hosts</h3>
         <p>Apply to mentor and/or host a technical or non-technical workshop. We review rolling submissions.</p>
@@ -274,7 +300,7 @@
           Submitting the form <strong>does not guarantee</strong> a volunteer opportunity. If there is an opening that matches your profile,
           <strong>you will be contacted by email</strong> with next steps.
         </div>
-      </div>
+      </div> -->
 
       <!-- Donations & Event Registration -->
           <div class="card">
