--- a/hackathonvolunteer-logindiscord.html
+++ b/hackathonvolunteer-logindiscord.html
@@ -305,7 +305,7 @@
                       (entry?.basicInfo?.position && entry.basicInfo.position!=="Not available" ? `• Position: ${entry.basicInfo.position}<br/>` : '') +
                       (entry?.basicInfo?.company && entry.basicInfo.company!=="Not available" ? `• Company: ${entry.basicInfo.company}<br/>` : '') +
                       (entry?.basicInfo?.discordUsername && entry.basicInfo.discordUsername!=="Not available" ? `• Discord: ${entry.basicInfo.discordUsername}<br/>` : '') +
-                      (entry?.basicInfo?.githubProfile && entry.basicInfo.githubProfile!=="Not available" ? `• GitHub: <a href="${entry.basicInfo.githubProfile}" target="_blank" style="color:#00ff99;">${entry.basicInfo.githubProfile}</a><br/>` : '') +
+                      (entry?.basicInfo?.githubProfile && entry.basicInfo.githubProfile!=="Not available" ? `• TICKET ID [1ST TIME REGISTRATION]: <a href="${entry.basicInfo.githubProfile}" target="_blank" style="color:#00ff99;">${entry.basicInfo.githubProfile}</a><br/>` : '') +
                     `</div>`;
           });
 
