--- a/hackathonvolunteer-wiki.html
+++ b/hackathonvolunteer-wiki.html
@@ -378,6 +378,43 @@
         </ul>
       </div>
 
+        <!-- Volunteer Response & Ticket ID Portal -->
+        <div class="card">
+          <div class="card-icon">🎟️</div>
+          <h3>Volunteer Responses Database — Review Your Registration & Ticket ID</h3>
+          <p>
+            Access is granted to respondents using the <strong>same Google account</strong> you used for 
+            <strong>Form No. 2 (Event Registration)</strong>. 
+            Use this portal to review your submitted responses Form no. 1, responses Forms no. 2, review hackathon responses Forms no. 3, confirm your registered events,
+            and view your unique <strong>Ticket ID by each response</strong>.
+          </p>
+          <a
+            class="card-button"
+            href="https://docs.google.com/spreadsheets/d/YOUR_SHARED_SHEET_ID_HERE"
+            target="_blank"
+            rel="noopener"
+          >
+            Open Volunteer Responses Portal
+          </a>
+          <div class="small-note">
+            <strong>Access Rules:</strong>
+            Access is granted only to respondents of <strong>Form No. 1, No. 2 and No. 3</strong> using the
+            <strong>same Google account</strong> they used to register.
+            Data is displayed on Google Sheets in a read-only format with file name:
+            <em>[Shared W Volunteers] – Code Crunch Events – Volunteer’s Registered Event</em>.
+            <ul class="small-note" style="margin-left:18px;">
+          <!-- <li>Form No. 1 responses</li> -->
+          <!-- <li>Form No. 2 — Volunteer Donations & Event Registration responses.</li> -->
+          <li>There will be tabs for each Form No. 2 per event, e.g., “Form No. 2 — Hack Nov 2025” </li>
+          <li>Tabs for each Hack Judge Expo list (updated after each event)</li>
+          <li>Tabs for each Hackathon Certificates list (updated after each event)</li>
+        </ul>
+          </div>
+
+
+
+          
+        </div>
 
 
 
