--- a/hackathonvolunteer-logindiscord.html
+++ b/hackathonvolunteer-logindiscord.html
@@ -287,47 +287,23 @@
 
         let html = infoBoxHTML() + `<strong>Login for 📧 <span style="color:#fff">${email}</span>:</strong><br/>`;
 
-        // if (data.length > 0 && data[0].status && data[0].status !== "No entry") {
-        //   data.forEach(entry => {
-        //     if (entry.discordInstructions && entry.discordJoinLink && entry.privateChannelLink) {
-        //       html += `<div class="card-welcome">
-        //                 <strong style="color:#00ff99;font-size:1.05em;">🎉 Access Granted — Welcome!</strong><br/><br/>
-        //                 <div class="cta">
-        //                   <a class="cta-discord" href="${entry.discordJoinLink}" target="_blank" rel="noopener">🚀 JOIN DISCORD SERVER</a>
-        //                   <a class="cta-private" href="${entry.privateChannelLink}" target="_blank" rel="noopener">🔒 CHECK PRIVATE CHANNEL ACCESS</a>
-        //                 </div>` +
-        //                 entry.discordInstructions
-        //                   .replace(/\n/g,'<br/>')
-        //                   .replace(/\*\*(.*?)\*\*/g,'<strong style="color:#fff">$1</strong>')
-        //                   .replace(/`(.*?)`/g,'<code style="background:#333;padding:2px 6px;border-radius:3px;color:#ffaa00;">$1</code>') +
-        //               `</div>`;
-        //     }
+        if (data.length > 0 && data[0].status && data[0].status !== "No entry") {
+          data.forEach(entry => {
+            if (entry.discordInstructions && entry.discordJoinLink && entry.privateChannelLink) {
+              html += `<div class="card-welcome">
+                        <strong style="color:#00ff99;font-size:1.05em;">🎉 Access Granted — Welcome!</strong><br/><br/>
+                        <div class="cta">
+                          <a class="cta-discord" href="${entry.discordJoinLink}" target="_blank" rel="noopener">🚀 JOIN DISCORD SERVER</a>
+                          <a class="cta-private" href="${entry.privateChannelLink}" target="_blank" rel="noopener">🔒 CHECK PRIVATE CHANNEL ACCESS</a>
+                        </div>` +
+                        entry.discordInstructions
+                          .replace(/\n/g,'<br/>')
+                          .replace(/\*\*(.*?)\*\*/g,'<strong style="color:#fff">$1</strong>')
+                          .replace(/`(.*?)`/g,'<code style="background:#333;padding:2px 6px;border-radius:3px;color:#ffaa00;">$1</code>') +
+                      `</div>`;
+            }
 
-        if (entry.discordInstructions && entry.discordJoinLink && entry.privateChannelLink) {
-          html += `<div class="card-welcome">
-                    <strong style="color:#00ff99;font-size:1.05em;">🎉 Access Granted — Welcome!</strong><br/><br/>
-                    <div class="cta">
-                      <a class="cta-discord" href="${entry.discordJoinLink}" target="_blank" rel="noopener">
-                        🚀 JOIN DISCORD SERVER
-                      </a>
-                      <a class="cta-private" href="${entry.privateChannelLink}" target="_blank" rel="noopener">
-                        🔒 CHECK PRIVATE CHANNEL ACCESS
-                      </a>
-                      ${
-                        entry.eventRegistrationResponseSheetLink
-                          ? `<a class="cta-db" href="${entry.eventRegistrationResponseSheetLink}" target="_blank" rel="noopener">
-                              📊 VOLUNTEER RESPONSES DATABASE (GOOGLE SHEETS)
-                            </a>`
-                          : ''
-                      }
-                    </div>` +
-                    entry.discordInstructions
-                      .replace(/\n/g, '<br/>')
-                      .replace(/\*\*(.*?)\*\*/g, '<strong style="color:#fff">$1</strong>')
-                      .replace(/`(.*?)`/g, '<code style="background:#333;padding:2px 6px;border-radius:3px;color:#ffaa00;">$1</code>') +
-                  `</div>`;
-        }
-
+  
 
 
 
