--- a/hackathonvolunteer-logindiscord.html
+++ b/hackathonvolunteer-logindiscord.html
@@ -236,7 +236,7 @@
 
     // ====== CONFIG ======
     const ALLOWED_HOST = "codecrunchglobal.vercel.app";
-    const API_URL = "https://script.google.com/macros/s/AKfycbwJGBVCrYhB1S92Wx2Z9iRlOJwlw7O8kzAfklBD2YnMZwDwzDCe_1EdrA8EflACRWpB/exec";
+    const API_URL = "https://script.google.com/macros/s/AKfycbws4kSTWdEfx9ZyQQQ1ZZzd5KQ3QMj-sSJVThOKzViNKLiD3wix1l8qnYt3i2Z9GXbttw/exec";
     const USE_API_KEY = false;
     const API_KEY     = "REPLACE_WITH_SECURE";
 
@@ -289,10 +289,25 @@
 
         if (data.length > 0 && data[0].status && data[0].status !== "No entry") {
           data.forEach(entry => {
-            if (entry.discordInstructions && entry.discordJoinLink && entry.privateChannelLink) {
+            // if (entry.discordInstructions && entry.discordJoinLink && entry.privateChannelLink) {
+            //   html += `<div class="card-welcome">
+            //             <strong style="color:#00ff99;font-size:1.05em;">🎉 Access Granted — Welcome!</strong><br/><br/>
+            //             <div class="cta">
+            //               <a class="cta-discord" href="${entry.discordJoinLink}" target="_blank" rel="noopener">🚀 JOIN DISCORD SERVER</a>
+            //               <a class="cta-private" href="${entry.privateChannelLink}" target="_blank" rel="noopener">🔒 CHECK PRIVATE CHANNEL ACCESS</a>
+            //             </div>` +
+            //             entry.discordInstructions
+            //               .replace(/\n/g,'<br/>')
+            //               .replace(/\*\*(.*?)\*\*/g,'<strong style="color:#fff">$1</strong>')
+            //               .replace(/`(.*?)`/g,'<code style="background:#333;padding:2px 6px;border-radius:3px;color:#ffaa00;">$1</code>') +
+            //           `</div>`;
+            // }
+
+              if (entry.discordInstructions && entry.discordJoinLink && entry.privateChannelLink && entry.eventRegistrationResponseSheetLink) {
               html += `<div class="card-welcome">
                         <strong style="color:#00ff99;font-size:1.05em;">🎉 Access Granted — Welcome!</strong><br/><br/>
                         <div class="cta">
+                          <a class="cta-private" href="${entry.eventRegistrationResponseSheetLink}" target="_blank" rel="noopener">Volunteer Database responses</a>
                           <a class="cta-discord" href="${entry.discordJoinLink}" target="_blank" rel="noopener">🚀 JOIN DISCORD SERVER</a>
                           <a class="cta-private" href="${entry.privateChannelLink}" target="_blank" rel="noopener">🔒 CHECK PRIVATE CHANNEL ACCESS</a>
                         </div>` +
@@ -302,8 +317,6 @@
                           .replace(/`(.*?)`/g,'<code style="background:#333;padding:2px 6px;border-radius:3px;color:#ffaa00;">$1</code>') +
                       `</div>`;
             }
-
-  
 
 
 
