--- a/hackathonvolunteer-logindiscord.html
+++ b/hackathonvolunteer-logindiscord.html
@@ -142,7 +142,7 @@
   <main class="container">
     <!-- Header -->
     <section class="header">
-      <h1>Volunteer Discord Login</h1>
+      <h1>Volunteer Discord Login & Volunteer Database Responses Access</h1>
       <p class="subtitle">
         Use the same gmail/google account you registered with on <strong>Form No. 2</strong>. We’ll check it against the volunteer list.
       </p>
