--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -276,6 +276,10 @@
             <a class="btn btn-primary" href="https://codecrunchglobal.vercel.app/hackathons.html" target="_blank">
               <i class="fa-solid fa-trophy"></i> Hackathons <span class="text-xs opacity-80 font-semibold ml-1">16+</span>
             </a>
+              <a class="btn btn-primary" href="https://codecrunchglobal.vercel.app/hackathon-winners.html" target="_blank">
+            <i class="fa-solid fa-medal"></i> Hackathon Winners 
+            <span class="text-xs opacity-80 font-semibold ml-1">🏅</span>
+          </a>
             <a class="btn btn-primary" href="https://codecrunchglobal.vercel.app/hacks-toolkit.html" target="_blank">
               <i class="fa-solid fa-book"></i> Open Hacker Guide
             </a>
