--- a/hackuniversity-hackwinners-empowher2025-sb copy.html
+++ b/hackuniversity-hackwinners-empowher2025-sb copy.html
@@ -238,9 +238,9 @@
         GENERATE YOUR WINNER CERTIFICATE • EmpowHer Hackathon 2025 Session B (In-person)
       </h2>
       <p class="card-description" style="text-align:center">
-        [ OFFICIAL HACKATHON WINNER CERTIFICATE ] — Use the same email you used for
-        <strong>Devpost submission</strong> or <strong>official team registration</strong>.
-        Certificates are issued only to verified winning teams, finalists, and special awardees.
+        [ OFFICIAL WINNER CERTIFICATE ] — Use the same email you used for
+        <strong>Devpost submission</strong> or <strong>team registration</strong>.
+        Certificates are issued only to verified winning & awarded teams.
       </p>
 
       <label for="certificateEmailInput" class="sr-only">Registered email address</label>
@@ -358,7 +358,7 @@
       ));
 
     function rolesToText(roles, rolesText){
-      // For winners pages, rolesText is:
+      // For winners pages, rolesText is expected to contain:
       // "Project Name — Track / Prize"
       if (rolesText) return String(rolesText);
       if (Array.isArray(roles)) return roles.join(', ');
@@ -399,7 +399,7 @@
       return `
         <div class="infobox">
           <strong style="color:#28a745">🏆 Winner Certificate Generator:</strong><br>
-          • For officially verified hackathon winners, finalists & special awardees<br>
+          • For officially verified winners, finalists & special awardees<br>
           • Use the same email used on Devpost / registration / submission<br>
           • Certificates open in a new tab ready for Print / Save as PDF
         </div>`;
@@ -449,14 +449,14 @@
 
             <div class="body-text">
               <p>
-                In recognition of your outstanding performance on
+                In recognition of your outstanding performance for
                 <strong>${c.rolesText}</strong>
                 at the <strong>${c.hackathonName}</strong>, held in
                 <strong>${c.location}</strong> on <strong>${c.date}</strong>.
               </p>
               <p>
                 Your innovation, technical excellence, and teamwork distinguished your project
-                among all submissions and exemplified the spirit of the Hack University Initiative.
+                among all submissions and contributed to the spirit of the Hack University Initiative.
               </p>
             </div>
           </div>
@@ -569,11 +569,10 @@
         else if (payload?.certificateData) certs = [payload];
         else if (payload?.[0]) certs = [payload[0]];
 
+        // Expect backend to mark eligible winners.
         const eligible = certs.filter(c =>
           c &&
-          (c.status === 'Certificate Available' ||
-           c.status === 'Winner Certificate Available' ||
-           c.isWinner)
+          (c.status === 'Certificate Available' || c.status === 'Winner Certificate Available' || c.isWinner)
         );
 
         if (!eligible.length){
@@ -630,7 +629,7 @@
       if (yearEl) yearEl.textContent = new Date().getFullYear();
 
       document.getElementById('certificateResult').innerHTML =
-        infoBoxHTML() + 'Enter your email above to check if a hackathon winner certificate is available…';
+        infoBoxHTML() + 'Enter your email above to check if a winner certificate is available…';
 
       const input = document.getElementById('certificateEmailInput');
       if (input){
