--- a/hackuniversity-hackwinners-empowher2025-sb.html
+++ b/hackuniversity-hackwinners-empowher2025-sb.html
@@ -239,8 +239,8 @@
       </h2>
       <p class="card-description" style="text-align:center">
         [ OFFICIAL HACKATHON WINNER CERTIFICATE ] — Use the same email you used for
-        <strong>Devpost submission</strong> or <strong>official team registration</strong>.
-        Certificates are issued only to verified winning teams, finalists, and special awardees.
+        <strong>OneStopForm</strong><strong>official registration</strong>.
+        Certificates are issued only to verified registered teams, finalists, and special awardees.
       </p>
 
       <label for="certificateEmailInput" class="sr-only">Registered email address</label>
@@ -410,8 +410,8 @@
       return `
         <div class="infobox">
           <strong style="color:#28a745">🏆 Winner Certificate Generator:</strong><br>
-          • For officially verified hackathon winners, finalists & special awardees<br>
-          • Use the same email used on Devpost / registration / submission<br>
+          • For officially verified hackathon winners & special awardees<br>
+          • Use the same email used to register on OneStopForm Hack registration, Devpost submission and event check in<br>
           • Certificates open in a new tab ready for Print / Save as PDF
         </div>`;
     }
