--- a/hackuniversity-hackwinners.html
+++ b/hackuniversity-hackwinners.html
@@ -111,6 +111,78 @@
     .footer-bottom .credits{font-size:12px;opacity:.85}
 
     @media (max-width:520px){.container{padding:16px}}
+
+
+/* 
+table student winners */
+    /* Winners table */
+    .winners-card{
+      margin-top:2rem;
+      background:#fff;
+      border:1px solid #dadce0;
+      border-radius:12px;
+      padding:20px;
+    }
+    .winners-card h2{
+      font-size:20px;
+      font-weight:600;
+      margin-bottom:6px;
+    }
+    .winners-card p{
+      color:#5f6368;
+      font-size:.9rem;
+      margin-bottom:12px;
+    }
+    .winners-table-wrap{
+      overflow-x:auto;
+      margin-top:8px;
+    }
+    .winners-table{
+      width:100%;
+      border-collapse:collapse;
+      font-size:.86rem;
+    }
+    .winners-table thead{
+      background:#111827;
+      color:#f9fafb;
+    }
+    .winners-table th,
+    .winners-table td{
+      padding:8px 10px;
+      border:1px solid #e5e7eb;
+      text-align:left;
+      white-space:nowrap;
+    }
+    .winners-table tbody tr:nth-child(even){
+      background:#f9fafb;
+    }
+    .winners-table tbody tr:hover{
+      background:#eff6ff;
+    }
+    .badge-track{
+      display:inline-block;
+      padding:3px 8px;
+      border-radius:999px;
+      font-size:.7rem;
+      font-weight:600;
+      background:#e0f2fe;
+      color:#1d4ed8;
+    }
+    .badge-position{
+      display:inline-block;
+      padding:3px 8px;
+      border-radius:6px;
+      font-size:.7rem;
+      font-weight:700;
+      background:#fef3c7;
+      color:#92400e;
+    }
+
+
+
+
+/* table student winnes end  */
+
   </style>
 </head>
 <body>
@@ -182,21 +254,21 @@
       <div class="portal-grid">
         <a class="portal-btn" href="#">
           <span>🏆 SummerCodeX — Summer 2025</span>
-          <small>Winners & Student Volunteer Certificates</small>
+          <small>COMMING SOON [Review Devpost for winners] - Winners & Student Volunteer Certificates</small>
         </a>
 
         <a class="portal-btn" href="#">
           <span>🏆 305 Hackathon Edition — Fall 2025</span>
-          <small>Winners & Student Volunteer Certificates</small>
+          <small>COMMING SOON [Review Devpost for winners] - Winners & Student Volunteer Certificates</small>
         </a>
 
-        <a class="portal-btn" href="https://codecrunchglobal.vercel.app/hackuniversity-hackwinners-empowher2025-sa.html">
+        <a class="portal-btn" href="#">
           <span>💪 EmpowHer Hackathon 2025 Session A (Online/Synchronous) — Fall 2025</span>
-          <small>Winners & Student Volunteer Certificates</small>
+          <small>COMMING SOON [Review Devpost for winners] - Winners & Student Volunteer Certificates</small>
         </a>
 
         <a class="portal-btn" href="https://codecrunchglobal.vercel.app/hackuniversity-hackwinners-empowher2025-sb.html">
-          <span>⚡ EmpowHer Hackathon 2025 Session A (In-Person) — Fall 2025</span>
+          <span>⚡ EmpowHer Hackathon 2025 Session B (In-Person) — Fall 2025</span>
           <small>Winners & Student Volunteer Certificates</small>
         </a>
       </div>
@@ -206,6 +278,105 @@
         or official volunteer sign-up.
       </div>
     </section>
+
+
+
+    <!-- WINNERS & AWARDEES DIRECTORY -->
+    <section class="winners-card" id="winners-directory">
+      <h2>📜 Official Winners & Awardees Directory</h2>
+      <p>
+        Public summary of confirmed <strong>hackathon winners, finalist teams, and special awardees</strong>.
+        Use this as a quick reference. For official proof, generate your certificate using the event portals above.
+      </p>
+
+      <div class="winners-table-wrap">
+        <table class="winners-table">
+          <thead>
+            <tr>
+              <th>Hackathon</th>
+              <th>Date</th>
+              <th>University / Organization</th>
+              <th>Student / Team Member</th>
+              <th>Project Name</th>
+              <th>Position</th>
+              <th>Track / Award</th>
+            </tr>
+          </thead>
+          <tbody>
+            <!-- EXAMPLE ROWS — replace / extend with real data -->
+
+          <tbody>
+            <tr>
+              <td>EmpowHer Online Hackathon 2025 – Session B (In-Person)</td>
+              <td>Oct 18, 2025</td>
+              <td>Florida International University</td>
+              <td>Laisha Bravo Juarez</td>
+              <td>FriendFinder</td>
+              <td><span class="badge-position">Second Place</span></td>
+              <td><span class="badge-track">Track #2 &mdash; "Tech Unicorn" Winner</span></td>
+            </tr>
+            <tr>
+              <td>EmpowHer Online Hackathon 2025 – Session B (In-Person)</td>
+              <td>Oct 18, 2025</td>
+              <td>Florida International University</td>
+              <td>Nile Celaya Urrutia</td>
+              <td>FriendFinder</td>
+              <td><span class="badge-position">Second Place</span></td>
+              <td><span class="badge-track">Track #2 &mdash; "Tech Unicorn" Winner</span></td>
+            </tr>
+            <tr>
+              <td>EmpowHer Online Hackathon 2025 – Session B (In-Person)</td>
+              <td>Oct 18, 2025</td>
+              <td>Florida International University</td>
+              <td>Aldo Arturo Ortega Yucra</td>
+              <td>NoScamApp</td>
+              <td><span class="badge-position">Second Place</span></td>
+              <td><span class="badge-track">Track #2 &mdash; "Tech Unicorn" Winner</span></td>
+            </tr>
+            <tr>
+              <td>EmpowHer Online Hackathon 2025 – Session B (In-Person)</td>
+              <td>Oct 18, 2025</td>
+              <td>Florida International University</td>
+              <td>Demetrius Smithh III</td>
+              <td>NoScamApp</td>
+              <td><span class="badge-position">Second Place</span></td>
+              <td><span class="badge-track">Track #1 &mdash; "General Track" Winner</span></td>
+            </tr>
+            <tr>
+              <td>EmpowHer Online Hackathon 2025 – Session B (In-Person)</td>
+              <td>Oct 18, 2025</td>
+              <td>Florida International University</td>
+              <td>Francesca Dumary</td>
+              <td>MentorMatch</td>
+              <td><span class="badge-position">First Place</span></td>
+              <td><span class="badge-track">Track #1 &mdash; "General Track" Winner</span></td>
+            </tr>
+              <!-- Add more rows per winning student / team member / project -->
+            <tr>
+              <td>EmpowHer Online Hackathon 2025 – Session B (In-Person)</td>
+              <td>Oct 18, 2025</td>
+              <td>Florida International University</td>
+              <td>Mostafa Sameer</td>
+              <td>FloodGuard Miami</td>
+              <td><span class="badge-position">First Place</span></td>
+              <td><span class="badge-track">Track #2 &mdash; "Tech Unicorn" Winner</span></td>
+            </tr>
+
+
+              <!-- Add more rows per winning student / team member / project -->
+          </tbody>
+
+
+
+
+
+        </table>
+      </div>
+    </section>
+
+
+
+
 
     <!-- ELIGIBILITY INFORMATION -->
     <section class="card" style="margin-top: 2rem;">
