--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -278,7 +278,7 @@
             </a>
               <a class="btn btn-primary" href="https://codecrunchglobal.vercel.app/hackathon-winners.html" target="_blank">
             <i class="fa-solid fa-medal"></i> Hackathon Winners 
-            <span class="text-xs opacity-80 font-semibold ml-1">🏅</span>
+            <span class="text-xs opacity-80 font-semibold ml-1"></span>
           </a>
             <a class="btn btn-primary" href="https://codecrunchglobal.vercel.app/hacks-toolkit.html" target="_blank">
               <i class="fa-solid fa-book"></i> Open Hacker Guide
