--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -276,7 +276,7 @@
             <a class="btn btn-primary" href="https://codecrunchglobal.vercel.app/hackathons.html" target="_blank">
               <i class="fa-solid fa-trophy"></i> Hackathons <span class="text-xs opacity-80 font-semibold ml-1">16+</span>
             </a>
-              <a class="btn btn-primary" href="https://codecrunchglobal.vercel.app/hackathon-winners.html" target="_blank">
+              <a class="btn btn-primary" href="https://codecrunchglobal.vercel.app/hackuniversity-hackwinners.html" target="_blank">
             <i class="fa-solid fa-medal"></i> Hackathon Winners 
             <span class="text-xs opacity-80 font-semibold ml-1"></span>
           </a>
