--- a/hackathonvolunteer-wiki.html
+++ b/hackathonvolunteer-wiki.html
@@ -309,7 +309,7 @@
             <p>Support the monthly hackathon and register as a volunteer supporter.</p>
             <p><strong>Donors with dual roles</strong> (Judge + Mentor)</p>
             <!-- TODO: Replace with your live Donations & Registration form URL -->
-            <a class="card-button" href="https://codecrunchglobal.vercel.app/hackathonvolunteer-form2.html" target="_blank" rel="noopener">
+            <a class="card-button" href="https://docs.google.com/document/d/1wNPG9l8MfihgGItGV_0ApGV_F-W2ABa2by5qCVKuR4s/edit?usp=sharing" target="_blank" rel="noopener">
               Open Forms no2
             </a>
             
