--- a/hackathonvolunteer-wiki.html
+++ b/hackathonvolunteer-wiki.html
@@ -335,7 +335,7 @@
         <h3>Form No. 3 — Hackathon Evaluation Form Forms </h3>
         <p><strong>Donors with dual roles</strong> (Judge + Mentor)</p>
         <!-- TODO: Replace with your live Donations & Registration form URL -->
-        <a class="card-button" href="https://codecrunchglobal.vercel.app/hackathonvolunteer-form3.html" target="_blank" rel="noopener">
+        <a class="card-button" href="https://docs.google.com/document/d/1zJCDtL_W2ak0stmIorQfJJNjeK-qZQfDAigGfHKJw_U/edit?usp=sharing" target="_blank" rel="noopener">
           Open Forms no3 
         </a>
         <div class="small-note">
